<resources>
    <string name="app_name">DoodleblueMart</string>
    <string name="text_rest_name">Doodle Restarunt</string>
    <string name="text_rating">5.0(200+)</string>
    <string name="text_rest_timing">All days : 09:00 AM - 06:00 PM</string>
    <string name="text_reach_us">Reach us at: 000000000</string>
    <string name="text_rest_book_table">Book a Table</string>
    <string name="text_view_cart_with_count">View Cart (%s)</string>
    <string name="text_menu">Menu</string>
    <string name="text_starter">Starter</string>
    <string name="text_day_d">D</string>
    <string name="text_night_n">N</string>
    <string name="text_item_one">menu Item Nmae</string>
    <string name="text_item_desc">Delicious Gujarati style with potatoes and peanuts</string>
    <string name="text_item_price">700</string>
    <string name="text_add_to_cart">Add</string>
    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="text_max_qty">20</string>
    <string name="text_welcome_message">Hi Welcome To mart</string>
    <string name="text_total_cost">Total Cost</string>
    <string name="text_review_order">Review Orders</string>
    <string name="text_show_more">Show more</string>
    <string name="text_show_less">Show Less</string>
    <string name="text_delivery_options">Delivery Options</string>
    <string name="text_dine_in">Dine In</string>
    <string name="text_take_away">Take away</string>
    <string name="text_place_order">Place order</string>
    <string name="text_my_cart">My Cart</string>
    <string name="text_add_note">Add Note</string>
    <string name="text_book_a_table">Book table</string>
    <string name="text_order_placed_successfully">Order Placed Successfully</string>
</resources>