<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callBack"
            type="com.palanivelraghul.doodlebluemart.adapter.MenuItemListAdapter.MenuItemListAdapterCallBack" />

        <variable
            name="item"
            type="com.palanivelraghul.doodlebluemart.entity.ItemEntity" />

        <variable
            name="isFromCart"
            type="Boolean" />

        <variable
            name="position"
            type="Integer" />

    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/density_size_5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/density_size_5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/density_size_5"
                android:layout_marginRight="@dimen/density_size_5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_night_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_outline_dark"
                    android:padding="@dimen/density_size_4"
                    android:text="@string/text_night_n"
                    android:textColor="@color/color_text_bold"
                    android:textSize="@dimen/text_size_14"
                    android:visibility="@{item.nightItems ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:id="@+id/tv_day_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/density_size_5"
                    android:background="@drawable/bg_outline_dark"
                    android:padding="@dimen/density_size_4"
                    android:text="@string/text_day_d"
                    android:textColor="@color/color_text_bold"
                    android:textSize="@dimen/text_size_14"
                    android:visibility="@{item.dayItem ? View.VISIBLE : View.GONE}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/density_size_5"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/density_size_5"
                    android:text="@{item.itemName}"
                    android:textColor="@color/color_text_medium"
                    android:textSize="@dimen/text_size_16"
                    tools:text="@string/text_item_one" />

                <TextView
                    android:id="@+id/tv_item_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/density_size_5"
                    android:text="@{item.itemDescription}"
                    android:textColor="@color/color_text_medium"
                    android:textSize="@dimen/text_size_14"
                    tools:text="@string/text_item_desc" />

                <TextView
                    android:id="@+id/tv_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/density_size_5"
                    android:textColor="@color/color_light_orange_1"
                    android:textSize="@dimen/text_size_14"
                    tools:text="@string/text_item_price" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/density_size_5"
                android:layout_marginRight="@dimen/density_size_10"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_add_to_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button_colored_dark_2"
                    android:onClick="@{()->callBack.itemQuantityIncrease(item.itemId, item.itemSelectedQuantity, item.itemStockQuantity, position)}"
                    android:paddingLeft="@dimen/density_size_10"
                    android:paddingTop="@dimen/density_size_5"
                    android:layout_gravity="end"
                    android:paddingRight="@dimen/density_size_10"
                    android:paddingBottom="@dimen/density_size_5"
                    android:text="@string/text_add_to_cart"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14"
                    android:visibility="@{item.itemSelectedQuantity > 0 ? View.GONE : View.VISIBLE}" />

                <TableRow
                    android:id="@+id/tr_select_item_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_outline_orange"
                    android:visibility="@{item.itemSelectedQuantity > 0 ? View.VISIBLE : View.GONE}">

                    <TextView
                        android:id="@+id/tv_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/density_size_2"
                        android:layout_marginRight="@dimen/density_size_2"
                        android:paddingLeft="@dimen/density_size_3"
                        android:layout_marginTop="@dimen/density_size_2"
                        android:paddingRight="@dimen/density_size_3"
                        android:layout_marginBottom="@dimen/density_size_2"
                        android:onClick="@{()->callBack.itemQuantityDecrease(item.itemId, item.itemSelectedQuantity, item.itemStockQuantity, position)}"
                        android:text="@string/text_minus"
                        android:textColor="@color/color_text_bold"
                        android:textSize="@dimen/text_size_20"/>

                    <TextView
                        android:id="@+id/tv_qty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/density_size_3"
                        android:layout_marginTop="@dimen/density_size_2"
                        android:layout_marginRight="@dimen/density_size_3"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/density_size_2"
                        android:text="@{String.valueOf(item.itemSelectedQuantity)}"
                        android:textColor="@color/color_text_bold"
                        android:textSize="@dimen/text_size_14"
                        android:textStyle="bold"
                        tools:text="@string/text_max_qty" />

                    <TextView
                        android:id="@+id/tv_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/density_size_5"
                        android:layout_marginTop="@dimen/density_size_2"
                        android:paddingRight="@dimen/density_size_5"
                        android:layout_marginLeft="@dimen/density_size_2"
                        android:layout_marginRight="@dimen/density_size_2"
                        android:layout_marginBottom="@dimen/density_size_2"
                        android:onClick="@{()->callBack.itemQuantityIncrease(item.itemId, item.itemSelectedQuantity, item.itemStockQuantity, position)}"
                        android:text="@string/text_plus"
                        android:textColor="@color/color_text_bold"
                        android:textSize="@dimen/text_size_20" />
                </TableRow>

                <ImageView
                    android:id="@+id/img_note"
                    android:layout_width="@dimen/density_size_24"
                    android:layout_height="@dimen/density_size_24"
                    android:layout_gravity="bottom|end"
                    android:adjustViewBounds="true"
                    android:layout_margin="@dimen/density_size_5"
                    android:src="@drawable/ic_round_message"
                    android:onClick="@{()->callBack.onMessageClick(item.itemId)}"
                    android:visibility="@{isFromCart ? View.VISIBLE : View.GONE}" />
            </LinearLayout>

        </TableRow>

    </androidx.cardview.widget.CardView>
</layout>