<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.palanivelraghul.doodlebluemart.viewmodel.ShopItemActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/density_size_200"
            android:scaleType="fitXY"
            android:src="@drawable/delicious_buffet_foods"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_rest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/density_size_20"
            android:layout_marginTop="@dimen/density_size_50"
            android:layout_marginRight="@dimen/density_size_20"
            android:layout_marginBottom="@dimen/density_size_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/density_size_10"
                    android:textColor="@color/color_text_bold"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold"
                    android:text="@string/text_rest_name" />

                <TableRow
                    android:id="@+id/tr_rating_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/density_size_10">

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_rating"
                        android:textColor="@color/color_text_medium"
                        android:textSize="@dimen/text_size_14"
                        app:drawableLeftCompat="@drawable/ic_outline_star_border" />

                    <View
                        android:layout_width="@dimen/density_size_1"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/density_size_6"
                        android:layout_marginEnd="@dimen/density_size_6"
                        android:background="@color/color_text_bold" />

                    <TextView
                        android:id="@+id/tv_timing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_rest_timing"
                        android:textColor="@color/color_text_medium"
                        android:textSize="@dimen/text_size_14" />

                </TableRow>


                <TextView
                    android:id="@+id/tv_reach_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/density_size_6"
                    android:gravity="center"
                    android:paddingLeft="@dimen/density_size_3"
                    android:text="@string/text_reach_us"
                    android:textColor="@color/color_text_medium"
                    android:textSize="@dimen/text_size_14"
                    app:drawableLeftCompat="@drawable/ic_round_call_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/density_size_10"
                    android:background="@drawable/bg_button_colored_dark"
                    android:onClick="@{()->viewModel.onBookATableClick()}"
                    android:paddingLeft="@dimen/density_size_20"
                    android:paddingTop="@dimen/density_size_10"
                    android:paddingRight="@dimen/density_size_20"
                    android:paddingBottom="@dimen/density_size_10"
                    android:text="@string/text_rest_book_table"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/density_size_4"
            android:layout_marginTop="@dimen/density_size_5"
            android:layout_marginBottom="@dimen/density_size_5"
            android:text="@string/text_starter"
            android:textColor="@color/color_text_bold"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_rest" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_item_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/density_size_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_menu_title"
            app:layout_constraintBottom_toTopOf="@id/tr_view_cart"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_rest_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/density_size_10"
            android:gravity="center"
            android:onClick="@{()->viewModel.onMenuClick()}"
            app:cardBackgroundColor="@color/color_light_orange_2"
            app:cardCornerRadius="@dimen/density_size_5"
            app:layout_constraintBottom_toTopOf="@id/tr_view_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_menu_title"
            app:layout_constraintVertical_bias="1.0">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/density_size_6"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/density_size_24"
                    android:layout_height="@dimen/density_size_24"
                    android:layout_marginLeft="@dimen/density_size_5"
                    android:layout_marginRight="@dimen/density_size_5"
                    android:src="@drawable/ic_baseline_restaurant_menu" />

                <TextView
                    android:id="@+id/tv_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/density_size_5"
                    android:layout_marginRight="@dimen/density_size_5"
                    android:text="@string/text_menu"
                    android:textAllCaps="true"
                    android:textColor="@color/color_text_bold"
                    android:textSize="@dimen/text_size_14" />
            </TableRow>
        </androidx.cardview.widget.CardView>


        <TableRow
            android:id="@+id/tr_view_cart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/density_size_50"
            android:background="@color/color_dark_grey"
            android:gravity="center"
            android:onClick="@{()->viewModel.navigateToCart()}"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="@dimen/density_size_24"
                android:layout_height="@dimen/density_size_24"
                android:layout_margin="@dimen/density_size_5"
                android:src="@drawable/ic_baseline_shopping_cart" />

            <TextView
                android:id="@+id/tv_view_cart_with_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/density_size_5"
                android:text="@string/text_view_cart_with_count"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />
        </TableRow>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>