<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.palanivelraghul.doodlebluemart.viewmodel.CartActivityViewModel" />

        <variable
            name="callBack"
            type="com.palanivelraghul.doodlebluemart.viewmodel.CartActivityViewModel.CartActivityViewModelCallBack" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/c_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_blue_shades" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/tool_bar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize" />

                    <LinearLayout
                        android:id="@+id/ll_cart_total_amount"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/density_size_130"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/density_size_100"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/white">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/density_size_10"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_total_cost"
                                    android:textColor="@color/color_light_orange_2"
                                    android:textSize="@dimen/text_size_16" />

                                <TextView
                                    android:id="@+id/tv_total_cost"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/density_size_10"
                                    android:text="@string/text_total_cost"
                                    android:textColor="@color/color_text_bold"
                                    android:textSize="@dimen/text_size_16"
                                    tools:text="100.00" />
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/density_size_0"
            app:layout_constraintBottom_toTopOf="@id/tv_place_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_menu_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/density_size_5"
                    android:layout_marginTop="@dimen/density_size_5"
                    android:text="@string/text_review_order"
                    android:textColor="@color/color_text_bold"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_selected_menu_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/density_size_10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_menu_title" />

                <TextView
                    android:id="@+id/tv_show_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/density_size_5"
                    android:layout_marginRight="@dimen/density_size_5"
                    android:onClick="@{()-> callBack.onClickOfMore()}"
                    android:text="@string/text_show_more"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_selected_menu_list" />

                <TextView
                    android:id="@+id/tv_delivery_option_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/density_size_5"
                    android:layout_marginTop="@dimen/density_size_5"
                    android:text="@string/text_delivery_options"
                    android:textColor="@color/color_text_bold"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_show_more" />

                <TableRow
                    android:id="@+id/tr_delivery_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/density_size_10"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_delivery_option_title">

                    <ImageView
                        android:id="@+id/img_dine_in"
                        android:layout_width="@dimen/density_size_24"
                        android:layout_height="@dimen/density_size_24"
                        android:layout_marginRight="@dimen/density_size_10"
                        android:src="@drawable/ic_baseline_restaurant_menu" />

                    <RadioButton
                        android:id="@+id/rb_dine_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/color_light_orange_2"
                        android:checked="true"
                        android:layoutDirection="rtl"
                        android:text="@string/text_dine_in" />

                    <ImageView
                        android:id="@+id/img_take_away"
                        android:layout_width="@dimen/density_size_24"
                        android:layout_height="@dimen/density_size_24"
                        android:layout_marginLeft="@dimen/density_size_15"
                        android:layout_marginRight="@dimen/density_size_10"
                        android:src="@drawable/ic_baseline_emoji_transportation" />

                    <RadioButton
                        android:id="@+id/rb_take_away"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/color_light_orange_2"
                        android:layoutDirection="rtl"
                        android:text="@string/text_take_away" />
                </TableRow>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_place_order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/density_size_50"
            android:background="@color/color_dark_grey"
            android:gravity="center"
            android:text="@string/text_place_order"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:onClick="@{()->callBack.onPlaceOrderClick()}"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>